# ai.dok

./: .gitignore  PERFORMANCE_OPTIMIZATIONS.md  README.md  docker-compose.yml  monitor_processing.sh  test_background_job.sh
.github/workflows/: client-docker-publish.yml  llm-interaction-service-docker-publish.yml
client/: .env.development  Dockerfile  index.html  package.json
client/src/: App.tsx  main.tsx
client/src/api/: api.ts
client/src/pages/: ChatPage.tsx
client/src/store/: authSlice.ts  store.ts
docs/: 1-data-extraction-plan.md  2-ai-model-development-plan.md  3-text-vs-vector-embeddings.md
llm_interaction_service/: .coveragerc  .env.development  .pre-commit-config.yaml  Dockerfile  HYBRID_RETRIEVAL_README.md  MIGRATION_GUIDE.md  README.md  pyproject.toml  tox.ini
llm_interaction_service/.docker/: entrypoint.sh
llm_interaction_service/app/: main.py
llm_interaction_service/app/api/endpoints/: collections.py  hello.py  indexing.py
llm_interaction_service/app/api/endpoints/interaction/: process_file.py  rag_pipeline.py
llm_interaction_service/app/api/endpoints/interaction/request_schemas/: generate_request.py  rag_request.py
llm_interaction_service/app/core/: app_logger.py  application.py  config.py  constants.py  logger.py  middleware.py
llm_interaction_service/app/factories/: bm25_service_factory.py  bucket_service_factory.py  hybrid_retrieval_service_factory.py  indexing_service_factory.py  llm_interaction_service_factory.py  ocr_service_factory.py  parse_file_service_factory.py  pdf_to_image_service_factory.py  rag_service_factory.py  reranker_service_factory.py  vector_store_service_factory.py
llm_interaction_service/app/interfaces/: bm25_service_interface.py  bucket_service_interface.py  hybrid_retrieval_service_interface.py  indexing_service_interface.py  llm_interaction_service_interface.py  ocr_service_interface.py  parse_file_service_interface.py  pdf_to_image_service_interface.py  rag_service_interface.py  reranker_service_interface.py  vector_store_service_interface.py
llm_interaction_service/app/services/: b2_bucket_service.py  background_job_manager.py  bm25_service.py  chroma_vector_store_service.py  groq_service.py  hybrid_retrieval_service.py  indexing_service.py  ollama_service.py  paddle_ocr_service.py  parse_file_service.py  pymupdf_opencv_pil_pdf_to_image_service.py  rag_service.py  rcp_section_parser_service.py  reranker_service.py
llm_interaction_service/tests/: conftest.py  rag_evaluator.py
llm_interaction_service/tests/data/: rag_test_set.json
llm_interaction_service/tests/endpoints/: hello_test.py
